# evm_simulator_rs

./: .env.example  .gitignore  Cargo.toml  README.md  output.txt
src/: cli.rs  lib.rs  main.rs
src/simulator/: constants.rs  fork_simulator.rs  mod.rs  print_result.rs  process_logs.rs  trace_simulator.rs  types.rs  utils.rs
